@startuml
title Diagramme de classes de la 1ère itération

class Classe{
    - nom : String
    - acces : int
    + Classe(String nom, int acces)
    + addMethode(Methode methode) : void
    + addAttribut(Attribut attribut) : void
    + removeAttribut(Attribut attribut) : void
    + getAttributs() : List<Attribut>
    + removeMethode(Methode methode) : void
    + getMethodes() : List<Methode>
    + String getNom() : String
}

class Methode{
    - acces : int
    - nom : String
    - typeRetour : Class
    + Methode(String nom, Class typeRetour, List<Attribut> parametres)
    + getAcces() : int
    + getNom() : String
    + getTypeRetour() : Class
    + getParametres() : List<Attribut>
}

class Attribut{
    - nom : String
    - acces : int
    - type : Class
    + Attribut(String nom, Class type)
    + Attribut(String nom, Class type, int acces)
    + getNom() : String
    + getType() : Class
    + setNom(String nom) : void
    + setType(Class type) : void
}

class ImporteurProjet{
    - repertoire : String
    + ImporteurProjet()
    + importerProjet(String chemin) : List<Classe>
    + importerFichier(File fichier) : Classe
}

Classe "1"--> "0..*"Methode : - méthodes : List<Methode>
Classe "1"--> "0..*"Attribut : - attributs : List<Attribut>

Methode "1"--> "0..*"Attribut : - paramètres : List<Attribut>
@enduml